hledger/test/errors/tcorderedactions.timeclock
#!/usr/bin/env -S hledger check -f 
# Clockin/clockout out of order:
# two clockins without intervening clockout,
# two clockouts without intervening clockin,
# or an initial clockout with no preceding clockin.

i 2022/01/01 00:00:00
i 2022/01/01 00:01:00
